objects/PC_Prescription__c.object
<CustomObject>
    <description>This Object captures prescription information for the prescribed drug for a patient when enrolled in an engagement program.</description>
    <fields>
        <fullName>ACLS_Engagement_Program_Code__c</fullName>
        <label>Engagement Program Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Days_Supply__c</fullName>
        <description>Number of days the prescribed medication will last if taken as per the recommended dosage.</description>
        <label>Days Supply</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The documents associated with the prescription.</description>
        <label>Document</label>
        <referenceTo>PC_Document__c</referenceTo>
        <relationshipLabel>Prescriptions</relationshipLabel>
        <relationshipName>Prescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Dosage__c</fullName>
        <description>The dosage of each drug in the prescription.</description>
        <label>Dosage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Frequency__c</fullName>
        <description>Frequency at which medication needs to be taken. For example, two times a day.</description>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Patient_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The patient account associated with a specific prescription.</description>
        <label>Patient</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>PC_Patient</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prescriptions (Patient)</relationshipLabel>
        <relationshipName>Patient_Prescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Physician_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The treating physician account associated with a specific prescription.</description>
        <label>Physician</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Physician does not exist or is not a physician account</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>PC_Physician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prescriptions (Physician)</relationshipLabel>
        <relationshipName>Physician_Prescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_PlaceOfService__c</fullName>
        <description>Place of Service</description>
        <label>Place of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>22</fullName>
                    <label>22: On Campus-Outpatient Hospita</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_PrimaryDiagnosis__c</fullName>
        <description>Primary Diagnosis Value</description>
        <label>Primary Diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M81.0</fullName>
                    <label>Age-related osteoporosis without current pathological fracture</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The drug associated with a specific prescription.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prescriptions</relationshipLabel>
        <relationshipName>Prescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Program_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program case associated with a specific prescription.</description>
        <label>Program Case</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>Program does not exist or is not a program case.</errorMessage>
            <filterItems>
                <field>Case.Type</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Prescriptions</relationshipLabel>
        <relationshipName>Prescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Refills_Frequency__c</fullName>
        <description>The formula used to calculate the refill frequency.</description>
        <formula>IF(ISBLANK(PC_Rx_End_Date__c  -  PC_Rx_Start_Date__c),0,((PC_Rx_End_Date__c  -  PC_Rx_Start_Date__c) /  PC_Rx_Refills__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refills Frequency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Requested_Quantity__c</fullName>
        <description>Quantity of prescribed medication.</description>
        <label>Requested Quantity</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Rx_End_Date__c</fullName>
        <description>The date when the prescription expires.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Refills__c</fullName>
        <description>Number of times refill of drugs needed.</description>
        <label>Refills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Start_Date__c</fullName>
        <description>The start date of the prescription.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Status of the prescription (Checked means Active, Unchecked means Inactive)</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_SecondaryDiagnosis__c</fullName>
        <description>Secondary Diagnosis Value</description>
        <label>Secondary Diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M82.0</fullName>
                    <label>Age-related osteoporosis without current pathological fracture</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_hasActivePA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the prescription has an associated prior authorization.</description>
        <label>hasActivePA</label>
        <type>Checkbox</type>
    </fields>
    <label>Prescription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Patient_Account__c</columns>
        <columns>PC_Program_Case__c</columns>
        <columns>PC_Rx_Start_Date__c</columns>
        <columns>PC_Rx_End_Date__c</columns>
        <columns>PC_Rx_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Rx-{000000}</displayFormat>
        <label>Prescription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PC_DuplicateCheckOfDiagnosis</fullName>
        <active>true</active>
        <description>The Primary and Secondary diagnosis fields cannot have same value</description>
        <errorConditionFormula>AND(
 TEXT(PC_PrimaryDiagnosis__c)  =  TEXT(PC_SecondaryDiagnosis__c),

  !ISBLANK(TEXT(PC_PrimaryDiagnosis__c)),
 !ISBLANK(TEXT(PC_SecondaryDiagnosis__c))
)</errorConditionFormula>
        <errorMessage>Prescription record cannot have same Primary and Secondary Diagnosis value</errorMessage>
    </validationRules>
</CustomObject>